Update README.md, fix possible naming collisions (#236)