@@ -4,71 +4,155 @@ Hyperion Edition provides the Business Processes modeling, management and operat
 
 It is good for exploration BPMN scenarios based on Flowable framework.
 
-## Get Started
+<!-- TOC -->
 
-### Build and Run
+* [codbex-hyperion](#codbex-hyperion)
+    * [Run steps](#run-steps)
+        * [Start using Docker and released image](#start-using-docker-and-released-image)
+        * [Start using Docker and local sources](#start-using-docker-and-local-sources)
+            * [Build the project jar](#build-the-project-jar)
+            * [Build and run docker image locally](#build-and-run-docker-image-locally)
+        * [Java standalone application](#java-standalone-application)
+            * [Start the application](#start-the-application)
+            * [Start the application **in debug** with debug port
+              `8000`](#start-the-application-in-debug-with-debug-port-8000)
+        * [Run unit tests](#run-unit-tests)
+        * [Run integration tests](#run-integration-tests)
+        * [Run all tests](#run-all-tests)
+        * [Format the code](#format-the-code)
+    * [Access the application](#access-the-application)
+    * [REST API](#rest-api)
+        * [Quick start](#quick-start)
 
-#### Java
+<!-- TOC -->
 
-- Build the project<br>
+## Run steps
+
+__Prerequisites:__
+
+- Export the following variables before executing the steps
+  ```shell
+  export GIT_REPO_FOLDER='<path-to-the-git-repo>'
+  export IMAGE='ghcr.io/codbex/codbex-hyperion:latest'
+  export CONTAINER_NAME='hyperion'
   ```
-  mvn clean install
-  ```
-- Start the application<br>
-  ```
-  java -jar application/target/codbex-hyperion-application-*.jar
-  ```
-  __Note:__ to start the application in debug
-  ```
-  java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000 -jar application/target/codbex-hyperion-application-*.jar
-  ```
 
-You can use on e of the following maven profiles to do different tasks<br>
+### Start using Docker and released image
 
-| Profile Name      | Description                                                          |
-|-------------------|----------------------------------------------------------------------|
-| tests             | Run unit and integration tests                                       |
-| unit-tests        | Run unit tests                                                       |
-| integration-tests | Run integration tests                                                |
-| quick-build       | Build project skipping tests, javadoc, licensing and code formatting |
-| format            | Format the code                                                      |
+```shell
+# optionally remove the existing container with that name
+docker rm -f "$CONTAINER_NAME"
+docker pull "$IMAGE"
 
-To activate a profile, add it to the maven command.<br>Example:
-
-```
-mvn clean install -P quick-build
-```
-
-#### Docker
-
-Alternatively, you can start the application using a Docker image
-
-```
-IMAGE_VERSION='latest'
-docker run --name codbex-hyperion --rm -p 80:80 \
-    ghcr.io/codbex/codbex-hyperion:$IMAGE_VERSION
+docker run --name "$CONTAINER_NAME" -p 80:80 "$IMAGE"
 ```
 
-If you want persistent workspace and database with the default configurations, you can attach a folder to the image
+---
+
+### Start using Docker and local sources
+
+#### Build the project jar
+
+```shell
+cd $GIT_REPO_FOLDER
+mvn -T 1C clean install -P quick-build
+```
+
+#### Build and run docker image locally
+
+__Prerequisites:__ [Build the project jar](#build-the-project-jar)
+
+  ```shell
+  cd "$GIT_REPO_FOLDER/application"
+  
+  docker build . --tag "$IMAGE"
+  
+  # optionally remove the existing container with that name
+  docker rm -f "$CONTAINER_NAME"
+
+  docker run --name "$CONTAINER_NAME" -p 80:80 "$IMAGE"
+  ```
+
+--- 
+
+### Java standalone application
+
+__Prerequisites:__ [Build the project jar](#build-the-project-jar)
+
+#### Start the application
+
+```shell
+cd "$GIT_REPO_FOLDER"
+
+java \
+    --add-opens=java.base/java.lang=ALL-UNNAMED \
+    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
+    --add-opens=java.base/java.nio=ALL-UNNAMED \
+    -jar application/target/codbex-hyperion-*.jar
+```
+
+#### Start the application **in debug** with debug port `8000`
+
+```shell
+cd "$GIT_REPO_FOLDER"
+
+export PHOEBE_AIRFLOW_WORK_DIR="$AIRFLOW_WORK_DIR"
+java \
+    -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000 \
+    --add-opens=java.base/java.lang=ALL-UNNAMED \
+    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
+    --add-opens=java.base/java.nio=ALL-UNNAMED \
+    -jar application/target/codbex-hyperion-*.jar
+```
+
+---
+
+### Run unit tests
+
+```shell
+cd "$GIT_REPO_FOLDER"
+mvn clean install -P unit-tests
+```
+
+---
+
+### Run integration tests
+
+```shell
+cd "$GIT_REPO_FOLDER"
+mvn clean install -P integration-tests
+```
+
+---
+
+### Run all tests
+
+```shell
+cd "$GIT_REPO_FOLDER"
+mvn clean install -P tests
+```
+
+---
+
+### Format the code
+
+```shell
+cd "$GIT_REPO_FOLDER"
+mvn verify -P format
+```
+
+---
+
+## Access the application
+
+- Open URL [http://localhost:80](http://localhost:80)
+- Login with the default credentials username `admin` and password `admin`
+
+## REST API
 
 ```
-HYPERION_WORKSPACE_DIR='/tmp/hyperion'
-IMAGE_VERSION='latest'
-
-docker run --name codbex-hyperion --rm -p 80:80 \
-  -v "$HYPERION_WORKSPACE_DIR:/target/dirigible" \
-  ghcr.io/codbex/codbex-hyperion:$IMAGE_VERSION
+http://localhost/swagger-ui/index.html
 ```
-
-#### Access the application
-
-To access the application open [http://localhost:80](http://localhost:80).
-Use the default credentials to login. User `admin` and password `admin`.
-
-#### REST API
-
-You can find all available REST APIs
-at [http://localhost:80/swagger-ui/index.html](http://localhost:80/swagger-ui/index.html)
 
 ### Quick start
 
